--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testcafe-reporter-html",
+  "name": "@sentinel-one/testcafe-reporter-html",
   "version": "1.4.5",
   "description": "The HTML reporter for TestCafe",
   "keywords": [
@@ -52,7 +52,7 @@
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.11.0",
-    "husky": "^1.2.0",
+    "husky": "^1.3.1",
     "lint-staged": "^8.1.0"
   }
 }
